--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lektion-10-26-fullstack",
+  "name": "fullstack-hamsterwars",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
+  "proxy": "http://localhost:1337",
   "scripts": {
     "start": "node backend/server.js",
     "start-backend": "node backend/server.js",
@@ -28,7 +29,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:1337",
+ 
   "eslintConfig": {
     "extends": [
       "react-app",
